# simple-class-timer

./: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
